# droidpad-pc

./: .bzrignore  .gitignore  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure-debug  configure-mingw  configure-mingw64  configure.ac  droidpad.nsi  index.html  libtool  params.json  pull-docs  updateIcons.sh  winbuild
data/: Makefile.am  Makefile.in  icon.xpm  iconlarge.xpm  layout.wxg  layout.xrc
data/adb/: Makefile.am  Makefile.in  adb
data/drv/objfre_wlh_amd64/amd64/: droidpad.cat  droidpad.inf  droidpad.sys  droidpad.unsigned.sys  hidkmdf.sys  hidkmdf.unsigned.sys  vJoy.inf  vJoy.sys  vjoy.cat
data/drv/objfre_wxp_x86/i386/: droidpad.cat  droidpad.inf  droidpad.sys  hidkmdf.sys  vJoy.inf  vJoy.sys  vjoy.cat
debian/: README.Debian  changelog  control  copyright  postinst
src/: Makefile.am  Makefile.in  droidApp.cpp  droidFrame.cpp  droidpad.rc  tlsTest.c  tlsTest.h
src/if-gui/: Makefile.am  Makefile.in  about.cpp  about.hpp  amd64.manifest  axisTweak.cpp  axisTweak.hpp  customHost.cpp  customHost.hpp  devicePair.cpp  devicePair.hpp  driverChoice.cpp  driverChoice.hpp  droidApp.cpp  droidApp.hpp  droidFrame.cpp  droidFrame.hpp  droidpad.rc  help.cpp  help.hpp  pageSizer.cpp  pageSizer.hpp  preferences.cpp  preferences.hpp  qrPanel.cpp  qrPanel.hpp  reorderDialog.cpp  reorderDialog.hpp  setup.cpp  setup.hpp  updateDisplay.cpp  updateDisplay.hpp  wxImagePanel.cpp  wxImagePanel.hpp  x86.manifest
src/lib/: Makefile.am  Makefile.in  data.cpp  data.hpp  deviceManager.cpp  deviceManager.hpp  deviceManagerThreads.cpp  deviceManagerThreads.hpp  droidpadCallbacks.cpp  droidpadCallbacks.hpp  events.cpp  events.hpp  log.hpp  mainThread.cpp  mainThread.hpp  mathUtil.hpp  proc.cpp  proc.hpp  types.cpp  types.hpp  updater.cpp  updater.hpp  winSetup.cpp  winSetup.hpp
src/lib/ext/: README  hexdump.c  hexdump.h
src/lib/ext/b64/: AUTHORS  base64.cpp  base64.hpp
src/lib/ext/md5/: md5.h
src/lib/ext/win32/: Makefile.am  Makefile.in  jsDriver.cpp  jsDriver.hpp  vjoy.cpp  vjoy.hpp  winUtil.cpp  winUtil.hpp
src/lib/ext/win32/js/: README  defs.h  public.h  stdafx.h  vJoyInstall.h  vJoyInstallLib.cpp
src/lib/ext/win32/js/winheader/: salfix.h  winioctl.h
src/lib/ext/win32/ppjoy/: Mapping.h  README
src/lib/ext/win32/vjoy/: ConfigMan.h  Debug.h  DeviceSetup.h  JoyBus.h  JoyDefs.h  Mapping.cpp  PPJoyAPI.cpp  README  public.h  stdafx.h  vJoyInstall.h  vJoyInstallLib.cpp
src/lib/include/: README  adb.hpp  outputMgr.hpp  platformSettings.hpp
src/lib/msw/: adminCheck.c  adminCheck.h  bootConf.cpp  bootConf.hpp  updater.cpp  winSetup.cpp  winSetup.hpp
src/lib/net/: connection.cpp  connection.hpp  dataDecode.cpp  dataDecode.hpp  deviceDiscover.cpp  deviceDiscover.hpp  mdns.cpp  mdns.hpp  secureConnection.cpp  secureConnection.hpp
src/lib/output/: IOutputMgr.cpp  IOutputMgr.hpp  outputSmoothBuffer.cpp  outputSmoothBuffer.hpp
src/lib/output/linux/: dpinput.c  dpinput.h  outputMgr.cpp  outputMgr.hpp
src/lib/output/win32/: jsOutputs.cpp  jsOutputs.hpp  outputMgr.cpp  outputMgr.hpp  vJoyOutputs.cpp  vJoyOutputs.hpp  wOutputMgr.cpp  wOutputMgr.hpp  wPlatformSettings.hpp  winOutputs.cpp  winOutputs.hpp
src/lib/usb/: Makefile.am  Makefile.in
src/lib/usb/all/: Makefile.in  adb.cpp  adb.hpp
src/lib/usb/files/: Makefile.am  Makefile.in
src/misc/: data.cpp
